# SDLCMakeTemplate

./: CMakeLists.txt  CMakeSettings.json  Main.cpp
include/: MainLoop.h
src/: CMakeLists.txt  MainLoop.cpp
